[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/images/Extra animations and enemies/Enemy sprites/spider.png" type="Texture" id=1]
[ext_resource path="res://mobScenes/Spider.gd" type="Script" id=2]
[ext_resource path="res://assets/images/Extra animations and enemies/Enemy sprites/spider_walk1.png" type="Texture" id=3]
[ext_resource path="res://assets/images/Extra animations and enemies/Enemy sprites/spider_walk2.png" type="Texture" id=4]
[ext_resource path="res://assets/images/Extra animations and enemies/Enemy sprites/spider_dead.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 12, 8 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "die"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 1 ), ExtResource( 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "walk"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 3 ) ]
}

[sub_resource type="RectangleShape2D" id=4]

[sub_resource type="RectangleShape2D" id=7]

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.0588235, 0.721569, 0.0705882, 1 )
corner_detail = 1

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.0235294, 0, 0, 1 )

[sub_resource type="RectangleShape2D" id=10]

[node name="Spider" type="KinematicBody2D" groups=["enemy"]]
position = Vector2( 980, 25 )
collision_layer = 4
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 3, 3 )
shape = SubResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/die = SubResource( 6 )
anims/walk = SubResource( 3 )

[node name="EngageArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EngageArea"]
scale = Vector2( 20, 6.5 )
shape = SubResource( 4 )

[node name="DeathArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathArea"]
scale = Vector2( 3.6, 2.4 )
shape = SubResource( 7 )

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_left = -34.0
margin_top = -41.0
margin_right = 36.0
margin_bottom = -26.0
custom_styles/fg = SubResource( 8 )
custom_styles/bg = SubResource( 9 )
max_value = 35.0
percent_visible = false

[node name="Timer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.4

[node name="Timer2" type="Timer" parent="."]
process_mode = 0
wait_time = 0.5

[node name="DamageArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
scale = Vector2( 3.6, 2.4 )
shape = SubResource( 10 )

[node name="Timer3" type="Timer" parent="."]
process_mode = 0
wait_time = 0.125

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="EngageArea" to="." method="_on_EngageArea_body_entered"]
[connection signal="body_exited" from="EngageArea" to="." method="_on_EngageArea_body_exited"]
[connection signal="body_entered" from="DeathArea" to="." method="_on_DeathArea_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="body_entered" from="DamageArea" to="." method="_on_DamageArea_body_entered"]
[connection signal="body_exited" from="DamageArea" to="." method="_on_DamageArea_body_exited"]
[connection signal="timeout" from="Timer3" to="." method="_on_Timer3_timeout"]
